--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  background-color: black;
+  border: none;
+  color: #61dafb;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 5px;
+}
