--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -1,7 +1,25 @@
 .Post {
+    position: relative;
     width: 300px;
+    height: 200px;
+    overflow: hidden;
     text-align: center;
     border: 3px solid white;
     border-radius: 10px;
     background-color: #257f98cb;
+}
+
+.readMore {
+    position: absolute;
+    bottom: 1px;
+    right: 5px;
+}
+
+.readMore:hover {
+    background-color: rgb(44, 44, 44);
+    color: #61dafb;
+}
+
+.readMore:active {
+    transform: translateY(2px);
 }
