--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,11 @@ button {
 }
 
 ul, li {
+  flex-basis: 30%;
+  min-width: 200px;
   text-decoration: none;
   list-style: none;
+  padding-left: 0%;
 }
 
 ul {
@@ -36,3 +39,8 @@ ul {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+li {
+  margin: 3px;
+}
+
