pressing the button "Show more" opening post and changes name of the button for "Show less" click on which seting the "post" into regular state also added "background screen" to focuse opened post while shown full post, clicking on "background screen" seting posts into previous state

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -12,11 +12,16 @@
 .Post>p {
     height: 70px;
     overflow: hidden;
+    margin: 5px;
+}
+
+.Post>h3 {
+  height: 49px;
+  overflow: hidden;
 }
 
 .readMore {
-    position: absolute;
-    bottom: 1px;
+    bottom: 2px;
     right: 35%;
 }
 
@@ -30,15 +35,18 @@
 }
 
 .PostClicked {
-    height: auto;
-    position: absolute;
-    z-index: 1;
-    background-color: #257f98;
-    width: 30%;
-    border: 3px solid white;
-    border-radius: 10px;
-  }
+  height: auto;
+  position: absolute;
+  z-index: 2;
+  background-color: #257f98;
+  min-width: 195px;
+  width: 30%;
+  border: 3px solid transparent;
+  border-radius: 10px;
+  margin: 0px;
+}
   
   .PostClicked>p {
     height: auto;
+    margin: 5px;
   }
